# gm

./: .gitignore  README.md  example.py  example_flowline2d.py  examples.py  flowline2d.py  flowline2d_output.csv  flowline2d_output_ANTH.csv  flowline2d_output_NAT.csv  flowline2d_output_width_ANTH.csv  flowline2d_output_width_COMB.csv  flowline2d_wolv_ss.pickle  pyproject.toml  repl_debug.py  setup.py  wolv_steadystate.py
.github/workflows/: python-package.yml
examples/: example_feq.ipynb  example_feq.py  example_flowline1d.py  example_flowline2d.py  example_gm3s.ipynb  example_lgm.py
matlab/: Nigardsbreen_TPmassbal.m  Oerlemans86_geom.mat  glac_init_nigardsbreen_PTmassbal_11km.mat
src/: FlowlineGlacierModel.m  ThreeStageModel.m  glac_init_baker.mat  gm.py  gm3s.py  lgm.py
src/archive/: flowline2d.py  flowline2d_numba.py  flowline2d_smolnumba.py
src/gm/: __init__.py  basic_flowline.py  flowline2d.py  flowline2d.py.txt  gm.py  gm1s.py  gm3s.py  utils.py  viz.py
test/: test_gm3s.py
